Corrigido link login e cadastro_post

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header class="header p-3 mb-3">
     <div class="container-home d-flex justify-content-between align-items-center">
       <h1 class="h1-header">Pet Blog</h1>
-      <button class="btn btn-outline-light" type="button">Login</button>
+      <button class="btn btn-outline-light" type="button" onclick="window.location.href='login.html';">Login</button>
     </div>
   </header>
 
@@ -29,7 +29,7 @@
           <li class="nav-item"><a class="nav-link" href="#">Diversos</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Todos</a></li>
         </ul>
-        <button class="btn btn-danger" type="button">Seja um escritor</button>
+        <button class="btn btn-danger" type="button" onclick="window.location.href='cadastro_post.html';">Seja um escritor</button>
       </div>
     </div>
   </nav>
